# Cpp11

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Auto/: CMakeLists.txt  auto.cpp
Move/: CMakeLists.txt  rvo.cpp  x.cpp  x.hpp
SmartPtrs/: CMakeLists.txt  pimpl.cpp  pimpl.hpp  smartptrs.cpp  uniqueptrs.cpp
Strings/: CMakeLists.txt  strings.cpp
Structures/: CMakeLists.txt  enums.cpp  structures.cpp
Threads/: CMakeLists.txt  producerconsumer.cpp  thread.cpp
Variadic/: CMakeLists.txt  variadic_printf.cpp
include/: memory.hpp
